--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "reorder"
-version = "1.1.0"
+version = "1.2.0"
 authors = ["Ken Reed <kenakioreed@gmail.com>"]
 edition = "2018"
 description = "Reorder a slice based on a slice of indicies"
@@ -10,7 +10,8 @@ keywords = ["rank", "reorder"]
 readme = "readme.md"
 
 [dependencies]
+uninit="0.4"
 
 [dev-dependencies]
-rand = "0.6.4"
+
 
